src/test/deca/context/invalid/resultats/test17_multiple_decl-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test17_multiple_decl.ass introuvable
